# Custos

./: Cargo.toml  Dockerfile  PROJECT-OVERVIEW.md  README.md  TESTING.md  agents.md  docker-compose.yml
.agent/rules/: security.md
.agent/skills/codeaegis/: SKILL.md  exclusions.json
common/: Cargo.toml  README.md
common/src/: lib.rs  metrics.rs
deploy/grafana/: dashboard.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/prometheus/: prometheus.yml
docs/: prometheus-grafana.md
grpc-basic/: Cargo.toml
grpc-basic/src/: main.rs
phase1-echo/: Cargo.toml  README.md
phase1-echo/src/: main.rs
phase2-grpc-basic/: Cargo.toml  README.md
phase2-grpc-basic/src/: lib.rs  main.rs
phase3-protobuf/: Cargo.toml  README.md
phase3-protobuf/src/: lib.rs  main.rs
phase4-advanced/: Cargo.toml  README.md  custos_bench_metrics.json  custos_bench_report.html  report_heavy_burst.html  report_heavy_burst.json  report_sustained.html  report_sustained.json
phase4-advanced/benchmark-tool/: Cargo.toml  README.md
phase4-advanced/benchmark-tool/src/: lib.rs  main.rs
phase4-advanced/k8s-integration/: Cargo.toml  README.md  sim-test.sh
phase4-advanced/k8s-integration/manifests/: daemonset.yaml  deployment.yaml  seccomp-profile.json
phase4-advanced/k8s-integration/src/: lib.rs
phase4-advanced/multi-queue-sharding/: Cargo.toml  README.md
phase4-advanced/multi-queue-sharding/src/: lib.rs  main.rs
phase4-advanced/rules-engine/: Cargo.toml  README.md
phase4-advanced/rules-engine/examples/: ai_security_policy.json  ai_security_policy.toml  demo.rs
phase4-advanced/rules-engine/src/: engine.rs  lib.rs  manager.rs  policy.rs
phase4-advanced/rules-engine/tests/: rules_engine_tests.rs
phase4-advanced/tx-optimizations/: Cargo.toml  README.md
phase4-advanced/tx-optimizations/src/: lib.rs
protobuf/: Cargo.toml
protobuf/src/: main.rs
src/: main.rs
tests/: basic_tests.rs  hammer.py  run_tests.sh
