[package]
name = "custos"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = { workspace = true }
zerocopy = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
custos-common = { workspace = true }

[dev-dependencies]
xsk-rs = { workspace = true }

[workspace]
resolver = "2"
members = [
    "common",
    "phase1-echo",
    "grpc-basic",
    "protobuf",
]

[workspace.dependencies]
libc = "0.2.153"
zerocopy = { version = "0.7.32", features = ["derive"] }
bytemuck = { version = "1.16.1", features = ["derive"] }
clap = { version = "4.5.1", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
custos-common = { path = "common" }
xsk-rs = { version = "0.8.0" }
