[package]
name = "custos-grpc-basic"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = { workspace = true }
zerocopy = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
custos-common = { workspace = true }
xsk-rs = { workspace = true }
