[package]
name = "custos-protobuf"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = { workspace = true }
zerocopy = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
custos-common = { workspace = true }
custos-grpc-basic = { path = "../phase2-grpc-basic" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
xsk-rs = { workspace = true }
