[package]
name = "custos-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
custos-common = { path = "../../common" }
custos-grpc-basic = { path = "../../phase2-grpc-basic" }
custos-protobuf = { path = "../../phase3-protobuf" }
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
ratatui = "0.26.1"
crossterm = { version = "0.27.0", features = ["event-stream"] }
axum = "0.7.5"
sysinfo = "0.30.12"
plotters = { version = "0.3.5", default-features = false, features = ["svg_backend", "line_series", "area_series", "histogram"] }
rand = "0.8"
chrono = { version = "0.4.38", features = ["serde"] }
zerocopy = { version = "0.7.32", features = ["derive"] }

