[package]
name = "custos-k8s-integration"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "linux")'.dependencies]
xsk-rs = "0.8.0"
libxdp-sys = "0.2.4+1.6.0"
custos-protobuf = { path = "../../phase3-protobuf" }

[dependencies]
libc = "0.2.153"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
custos-common = { path = "../../common" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5.1", features = ["derive"] }
serde_json = "1.0"
