[package]
name = "custos-rules-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = "1"
tracing = "0.1.40"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
custos-grpc-basic = { path = "../../phase2-grpc-basic" }
custos-protobuf = { path = "../../phase3-protobuf" }
zerocopy = { version = "0.7.32", features = ["derive"] }


